--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,46 @@
---- 
-version: 2.1
-jobs: 
-  build: 
-    docker: 
-      - 
-        image: "circleci/openjdk:8-jdk-browsers"
-    steps: 
+# Java Gradle CircleCI 2.0 configuration file
+# See: https://circleci.com/docs/2.0/language-java/
+version: 2
+
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+jobs:
+  build:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
+    environment:
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
       - checkout
-      - setup_remote_docker
-      - 
-        restore_cache: 
-          key: "spring-rest-helloworld-{{ checksum \"pom.xml\" }}"
-      - 
-        run: "mvn dependency:go-offline"
-      - 
-        save_cache: 
-          key: "circleci-demo-java-spring-{{ checksum \"pom.xml\" }}"
-          paths: 
-            - ~/.m2
-      - 
-        run: "mvn package"
-      - 
-        store_test_results: 
-          path: target/surefire-reports
-      - 
-        store_artifacts: 
-          path: target/spring-rest-helloworld-0.0.1-SNAPSHOT.war
-      - 
-        run: 
-          command: "if mvn -q -Dexec.executable=\"echo\" -Dexec.args='${project.version}' --non-recursive exec:exec | grep -q \"SNAPSHOT\"; then mvn versions:set -DremoveSnapshot; fi;\n\
-              echo $(mvn -q -Dexec.executable=\"echo\" -Dexec.args='${project.version}' --non-recursive exec:exec)-$(echo $CIRCLE_SHA1 | cut -c -7)-$CIRCLE_BUILD_NUM > tempvers.txt\n\
-              mvn versions:set -DnewVersion=$(cat tempvers.txt) \n"
-          name: "remove snapshot version"
-      - 
-        run: 
-          command: |
-              cp target/*.war docker/app/
-              docker login -u $DOCKER_USER -p $DOCKER_PASS
-              docker build --no-cache -t $DOCKER_USER/$CIRCLE_PROJECT_REPONAME:$(cat tempvers.txt) docker
-              docker push $DOCKER_USER/$CIRCLE_PROJECT_REPONAME:$(cat tempvers.txt)
-          name: "Build application Docker image"
-    working_directory: ~/spring-rest-helloworld
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: gradle dependencies
+
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle" }}
+
+      # run tests!
+      - run: gradle test
